--- a/Sales/Sales/Resources/Resource.pt.resx
+++ b/Sales/Sales/Resources/Resource.pt.resx
@@ -153,4 +153,13 @@
   <data name="Remarks" xml:space="preserve">
     <value>Observações</value>
   </data>
+  <data name="ChangeImage" xml:space="preserve">
+    <value>Toque na imagem para alterá-la.</value>
+  </data>
+  <data name="DescriptionError" xml:space="preserve">
+    <value>É necessário inserir uma descrição</value>
+  </data>
+  <data name="PriceError" xml:space="preserve">
+    <value>Você deve inserir um preço maior que zero.</value>
+  </data>
 </root>
