--- a/Sales/Sales/Resources/Resource.es.resx
+++ b/Sales/Sales/Resources/Resource.es.resx
@@ -153,4 +153,13 @@
   <data name="Remarks" xml:space="preserve">
     <value>Observaciones</value>
   </data>
+  <data name="ChangeImage" xml:space="preserve">
+    <value>Toca la imagen para cambiarla.</value>
+  </data>
+  <data name="DescriptionError" xml:space="preserve">
+    <value>Debe escribir una descripción</value>
+  </data>
+  <data name="PriceError" xml:space="preserve">
+    <value>Debe ingresar un precio mayor que cero.</value>
+  </data>
 </root>
