--- a/Sales/Sales/Resources/Resource.es.resx
+++ b/Sales/Sales/Resources/Resource.es.resx
@@ -192,4 +192,10 @@
   <data name="Confirm" xml:space="preserve">
     <value>¡Confirmar!</value>
   </data>
+  <data name="EditProduct" xml:space="preserve">
+    <value>Editar Producto</value>
+  </data>
+  <data name="IsAvailable" xml:space="preserve">
+    <value>Está disponible?</value>
+  </data>
 </root>
