--- a/Sales/Sales/Resources/Resource.pt.resx
+++ b/Sales/Sales/Resources/Resource.pt.resx
@@ -192,4 +192,10 @@
   <data name="Confirm" xml:space="preserve">
     <value>Confirmar</value>
   </data>
+  <data name="EditProduct" xml:space="preserve">
+    <value>Editar produto</value>
+  </data>
+  <data name="IsAvailable" xml:space="preserve">
+    <value>Está disponível.</value>
+  </data>
 </root>
