--- a/Sales/Sales/Resources/Resource.pt.resx
+++ b/Sales/Sales/Resources/Resource.pt.resx
@@ -303,4 +303,7 @@
   <data name="RegisterConfirmation" xml:space="preserve">
     <value>O usuário foi criado com êxito. Agora você pode entrar com o e-mail e a senha atribuída.</value>
   </data>
+  <data name="Categories" xml:space="preserve">
+    <value>Categorias</value>
+  </data>
 </root>
