--- a/Sales/Sales/Resources/Resource.es.resx
+++ b/Sales/Sales/Resources/Resource.es.resx
@@ -306,4 +306,13 @@
   <data name="Categories" xml:space="preserve">
     <value>Categorías</value>
   </data>
+  <data name="Category" xml:space="preserve">
+    <value>Categoría</value>
+  </data>
+  <data name="CategoryPlaceholder" xml:space="preserve">
+    <value>Seleccione la categoría...</value>
+  </data>
+  <data name="CategoryError" xml:space="preserve">
+    <value>Debes seleccionar una categoría.</value>
+  </data>
 </root>
