--- a/Sales/Sales/Resources/Resource.it.resx
+++ b/Sales/Sales/Resources/Resource.it.resx
@@ -306,4 +306,13 @@
   <data name="Categories" xml:space="preserve">
     <value>Categorie</value>
   </data>
+  <data name="Category" xml:space="preserve">
+    <value>Categoria</value>
+  </data>
+  <data name="CategoryPlaceholder" xml:space="preserve">
+    <value>Seleziona la categoria...</value>
+  </data>
+  <data name="CategoryError" xml:space="preserve">
+    <value>Debes seleccionar una categoría.</value>
+  </data>
 </root>
